// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`locateFiles > expandes tilde in glob "~+/__tests__/fixtures" 1`] = `
[
  "/__tests__/fixtures/CMYK-example.jpg",
  "/__tests__/fixtures/beach-sqip.svg",
  "/__tests__/fixtures/beach.jpg",
  "/__tests__/fixtures/transparent-background.png",
]
`;

exports[`locateFiles > invalid directory or files yields empty array 1`] = `
[Error: Unable to find any files via /foo/bar/baz. Make sure the file exists.

If you are using globbing patterns, the following features are supported:

https://github.com/micromatch/micromatch#matching-features]
`;

exports[`locateFiles > invalid glob 1`] = `
[Error: Unable to find any files via /foo/bar/baz/*. Make sure the file exists.

If you are using globbing patterns, the following features are supported:

https://github.com/micromatch/micromatch#matching-features]
`;

exports[`locateFiles > single file 1`] = `
[
  "/__tests__/fixtures/beach.jpg",
]
`;

exports[`locateFiles > subdirectory glob "**/*" 1`] = `
[
  "/__tests__/fixtures/CMYK-example.jpg",
  "/__tests__/fixtures/beach-sqip.svg",
  "/__tests__/fixtures/beach.jpg",
  "/__tests__/fixtures/transparent-background.png",
]
`;

exports[`locateFiles > whole directory with glob "*" 1`] = `
[
  "/__tests__/fixtures/CMYK-example.jpg",
  "/__tests__/fixtures/beach-sqip.svg",
  "/__tests__/fixtures/beach.jpg",
  "/__tests__/fixtures/transparent-background.png",
]
`;

exports[`locateFiles > whole directory with glob "*.{jpg,jpeg}" 1`] = `
[
  "/__tests__/fixtures/CMYK-example.jpg",
  "/__tests__/fixtures/beach.jpg",
]
`;

exports[`locateFiles > whole directory without glob 1`] = `
[
  "/__tests__/fixtures/CMYK-example.jpg",
  "/__tests__/fixtures/beach-sqip.svg",
  "/__tests__/fixtures/beach.jpg",
  "/__tests__/fixtures/transparent-background.png",
]
`;

exports[`locateFiles expandes tilde in glob "~+/__tests__/fixtures" 1`] = `
[
  "/__tests__/fixtures/CMYK-example.jpg",
  "/__tests__/fixtures/beach-sqip.svg",
  "/__tests__/fixtures/beach.jpg",
  "/__tests__/fixtures/transparent-background.png",
]
`;

exports[`locateFiles invalid directory or files yields empty array 1`] = `
"Unable to find any files via /foo/bar/baz. Make sure the file exists.

If you are using globbing patterns, the following features are supported:

https://github.com/micromatch/micromatch#matching-features"
`;

exports[`locateFiles invalid glob 1`] = `
"Unable to find any files via /foo/bar/baz/*. Make sure the file exists.

If you are using globbing patterns, the following features are supported:

https://github.com/micromatch/micromatch#matching-features"
`;

exports[`locateFiles single file 1`] = `
[
  "/__tests__/fixtures/beach.jpg",
]
`;

exports[`locateFiles subdirectory glob "**/*" 1`] = `
[
  "/__tests__/fixtures/CMYK-example.jpg",
  "/__tests__/fixtures/beach-sqip.svg",
  "/__tests__/fixtures/beach.jpg",
  "/__tests__/fixtures/transparent-background.png",
]
`;

exports[`locateFiles whole directory with glob "*" 1`] = `
[
  "/__tests__/fixtures/CMYK-example.jpg",
  "/__tests__/fixtures/beach-sqip.svg",
  "/__tests__/fixtures/beach.jpg",
  "/__tests__/fixtures/transparent-background.png",
]
`;

exports[`locateFiles whole directory with glob "*.{jpg,jpeg}" 1`] = `
[
  "/__tests__/fixtures/CMYK-example.jpg",
  "/__tests__/fixtures/beach.jpg",
]
`;

exports[`locateFiles whole directory without glob 1`] = `
[
  "/__tests__/fixtures/CMYK-example.jpg",
  "/__tests__/fixtures/beach-sqip.svg",
  "/__tests__/fixtures/beach.jpg",
  "/__tests__/fixtures/transparent-background.png",
]
`;
